; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/commands/extr_explain.c_ExplainPropertyFloat.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/commands/extr_explain.c_ExplainPropertyFloat.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [5 x i8] c"%.*f\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ExplainPropertyFloat(i8* %0, i8* %1, double %2, i32 %3, i32* %4) #0 {
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca double, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca i8*, align 8
  store i8* %0, i8** %6, align 8
  store i8* %1, i8** %7, align 8
  store double %2, double* %8, align 8
  store i32 %3, i32* %9, align 4
  store i32* %4, i32** %10, align 8
  %12 = load i32, i32* %9, align 4
  %13 = load double, double* %8, align 8
  %14 = call i8* @psprintf(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i32 %12, double %13)
  store i8* %14, i8** %11, align 8
  %15 = load i8*, i8** %6, align 8
  %16 = load i8*, i8** %7, align 8
  %17 = load i8*, i8** %11, align 8
  %18 = load i32*, i32** %10, align 8
  %19 = call i32 @ExplainProperty(i8* %15, i8* %16, i8* %17, i32 1, i32* %18)
  %20 = load i8*, i8** %11, align 8
  %21 = call i32 @pfree(i8* %20)
  ret void
}

declare dso_local i8* @psprintf(i8*, i32, double) #1

declare dso_local i32 @ExplainProperty(i8*, i8*, i8*, i32, i32*) #1

declare dso_local i32 @pfree(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
